--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,38 @@
-language: c++
+language: cpp
 
 compiler: gcc
 
-sudo: false
+dist: xenial
+sudo: required
 
-addons:
-  apt:
-    packages:
-      - binutils-mingw-w64-i686
-      - gcc-mingw-w64-i686
-      - g++-mingw-w64-i686
+matrix:
+  include:
+  - os:  linux
+    env: BITS=32
+    addons:
+      apt:
+        packages:
+          - binutils-mingw-w64-i686
+          - gcc-mingw-w64-i686
+          - g++-mingw-w64-i686
+  - os:  linux
+    env: BITS=64
+    addons:
+      apt:
+        packages:
+          - binutils-mingw-w64-x86-64
+          - gcc-mingw-w64-x86-64
+          - g++-mingw-w64-x86-64
 
 script:
-  - make
+  - make BITS=$BITS
+
+#deploy:
+#  provider:     releases
+#  file:         IndentByFold-*.zip
+#  file_glob:    true
+#  skip_cleanup: true
+#  api_key:
+#    secure: //TODO
+#  on:
+#    tags: true
